	`method'. Now it expects `(concat method-class "/" method)'.

	* twittering-mode.el (twittering-update-status-if-not-blank):
	Adjust for change to twittering-http-post.
	(twittering-update-lambda): Likewise.
	(twittering-update-jojo): Likewise.

	* twittering-mode.el (twittering-get-twits): Set parameter `count'
	from twittering-get-count if existing.

2009-09-01  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el (twittering-retweet):
	Don't set the original status ID when retweeting.

2009-08-23  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-keybind-message): add. displaying important keybindings in minibuffer

2009-08-22  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-get-username): add
	(twittering-get-password): changed prompt
	(twittering-status-to-status-datum): added a new text property 'uri-in-text'
	(twittering-enter): use 'uri-in-text'

2009-08-19  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el
	(twittering-image-type):
	Use external 'file' program if available to detect image types,
	and store the results in memory to avoid having to call it once
	and again.
	(twittering-format-status):
	Pass full image path to `twittering-image-type'

2009-06-18  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el (twittering-http-get)
	(twittering-http-get-default-sentinel)
	(twittering-get-timeline, twittering-mode-map)
	(twittering-current-timeline-noninteractive)
	(twittering-current-timeline, twittering-erase-old-statuses):
	Get rid of the `twittering-last-timeline-interactive' global
	variable.

2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-sign-simple-string)
	(twittering-sign-string-default-function)
	(twittering-sign-string-function, twittering-sign-string): Add
	new.
	(twittering-update-status-if-not-blank): Fix params, support sign.

2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>
