@@ -237,6 +237,7 @@ directory. You should change through function'twittering-icon-mode'")
 
 (defvar twittering-image-stack nil)
 (defvar twittering-image-type-cache nil)
+(defvar twittering-convert-program "/usr/bin/convert")
 
 (defun twittering-image-type (file-name)
   (if (and (not (assoc file-name twittering-image-type-cache))
@@ -246,6 +247,20 @@ directory. You should change through function'twittering-icon-mode'")
 			 ((string-match "JPEG" file-output) 'jpeg)
 			 ((string-match "PNG" file-output) 'png)
 			 ((string-match "GIF" file-output) 'gif)
+			 ((string-match "bitmap" file-output)
+			  (let ((coding-system-for-read 'raw-text)
+				(coding-system-for-write 'binary))
+			    (with-temp-buffer
+			      (set-buffer-multibyte nil)
+			      (insert-file-contents file-name)
+			      (call-process-region
+			       (point-min) (point-max)
+			       twittering-convert-program
+			       t (current-buffer) nil
+			       "bmp:-" "png:-")
+			      (write-region (point-min) (point-max)
+					    file-name)))
+			  'png)
 			 ((string-match "\\.jpe?g" file-name) 'jpeg)
 			 ((string-match "\\.png" file-name) 'png)
 			 ((string-match "\\.gif" file-name) 'gif)
