@@ -73,6 +73,11 @@
 	* twittering-mode.el (twittering-get-twits): Set parameter `count'
 	from twittering-get-count if existing.
 
+2009-11-06  Naohiro Aota  <naota@elisp.net>
+	* twittering-mode.el (twittering-image-type): Support bitmap type
+	using `convert'.
+	(twittering-convert-program): New varibale.
+
 2009-09-01  Alberto Garcia  <agarcia@igalia.com>
 
 	* twittering-mode.el (twittering-retweet):
